--- a/CloudGateway/src/main/resources/application.yaml
+++ b/CloudGateway/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   application:
     name: API-GATEWAY
   config:
-    import: configserver:http://localhost:9296
+    import: configserver:http://${CONFIG_SERVER_URL:localhost}:9296
   cloud:
     gateway:
         routes:
@@ -48,3 +48,5 @@ spring:
                 args:
                   redis-rate-limiter.replenishRate: 1
                   redis-rate-limiter.burstCapacity: 1
+
+
